--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.11.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
 Django==5.2.10
 django-basicauth==0.5.3
 gunicorn==24.1.1
+idna==3.11
 mysqlclient==2.2.7
 packaging==26.0
 python-dotenv==1.2.1
+requests==2.32.5
 sqlparse==0.5.5
+urllib3==2.6.3
 whitenoise==6.11.0
